--- a/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
+++ b/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
@@ -1,12 +1,10 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Dosis|Josefin+Sans');
-
+﻿
 .container {
     opacity: 0.5;
     font-size: 24px;
     color: white;
     font-weight: bold;
     background-color: black;
-    font-family: Dosis;
     padding: 0px;
 }
 
@@ -37,4 +35,9 @@ label {
     background: #ff3300;
     border-radius: 4px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.foot {
+    text-align: center;
+    margin-bottom: 0px;
 }
