--- a/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
+++ b/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
@@ -13,7 +13,7 @@
     background-color: black;
     font-family: Dosis;
     padding: 0px;
-    margin-top: 15px;
+    margin-top: 16px;
 }
 
 .heading {
@@ -25,9 +25,9 @@ btn.btn-primary:active {
 }
 
 label {
-    font-size: 10px;
+    font-size: 20px;
     font-weight:normal;
-    margin-top:2px;
+    margin-top:4px;
 }
 
 .datePicker {
@@ -64,5 +64,46 @@ label {
     color: black;
 }
 h4 {
-margin-bottom:40px;
+margin-bottom:60px;
 }
+
+.panel-pricing {
+    -moz-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+}
+
+    .panel-pricing:hover {
+        box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
+    }
+
+    .panel-pricing .panel-heading {
+        padding: 13px 10px;
+        color: white;
+        background-color: #ed1c24;
+        border-color: #ed1c24;
+    }
+
+        .panel-pricing .panel-heading .fa {
+            margin-top: 10px;
+            font-size: 58px;
+        }
+
+    .panel-pricing .list-group-item {
+        color: #777777;
+        border-bottom: 1px solid rgba(250, 250, 250, 0.5);
+    }
+
+.panel {
+    border: 0px solid !important;
+}
+
+.panel-pricing .panel-body {
+    font-size: 40px;
+    padding: 10px;
+    margin: 0px;
+    border-bottom: 1px solid #cfcfcf;
+}
+
+
+
