--- a/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
+++ b/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
@@ -38,13 +38,19 @@ label {
     font-size: 16px;
 }
 
-
-
 .pageButton {
     margin-top: 60px;
     margin-bottom: 20px;
     margin-left: 10px;
     max-height: 80px;
+    color: white;
+    font-size: 25px;
+    background: #ff3300;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.panelButton {
     color: white;
     font-size: 25px;
     background: #ff3300;
@@ -78,32 +84,25 @@ margin-bottom:60px;
     }
 
     .panel-pricing .panel-heading {
-        padding: 13px 10px;
         color: white;
-        background-color: #ed1c24;
-        border-color: #ed1c24;
+        border-radius: 4px;
+        background-color: black;
+        margin-top:4px;
     }
-
-        .panel-pricing .panel-heading .fa {
-            margin-top: 10px;
-            font-size: 58px;
-        }
-
-    .panel-pricing .list-group-item {
-        color: #777777;
-        border-bottom: 1px solid rgba(250, 250, 250, 0.5);
-    }
-
 .panel {
-    border: 0px solid !important;
+    margin-top:6px;
+    border: 1px solid !important;
+    border-color:white;
 }
 
 .panel-pricing .panel-body {
-    font-size: 40px;
-    padding: 10px;
+    font-size: 30px;
     margin: 0px;
-    border-bottom: 1px solid #cfcfcf;
+    background-color: black;
+    border-bottom: 1px solid white
 }
-
+.panel-footer {
+    background-color: black !important;
+}
 
 
