--- a/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
+++ b/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
@@ -16,6 +16,17 @@
     margin-top: 16px;
 }
 
+.container-list {
+    opacity: 0.9;
+    font-size: 20px;
+    color: black;
+    font-weight: normal;
+    background-color: white;
+    font-family: Dosis;
+    padding: 0px;
+    margin-top: 16px;
+}
+
 .heading {
     margin-top: 90px;
 }
@@ -62,7 +73,7 @@ label {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 80px;
     color: black;
 }
 
@@ -70,10 +81,15 @@ label {
     color: black;
 }
 
-h4 {
-    margin-bottom: 60px;
+.space {
+    margin-bottom: 40px;
 }
-
+.orange {
+    color: #ff3300;
+}
+.green {
+    color: #00b300;
+}
 .panel-pricing {
     -moz-transition: all .3s ease;
     -o-transition: all .3s ease;
@@ -85,25 +101,18 @@ h4 {
     }
 
     .panel-pricing .panel-heading {
-        color: white;
-        border-radius: 4px;
-        background-color: black;
+        color: black;
+        background-color: white;
         margin-top: 4px;
     }
 
 .panel {
     margin-top: 6px;
-    border: 1px solid !important;
-    border-color: white;
 }
 
 .panel-pricing .panel-body {
     font-size: 30px;
     margin: 0px;
-    background-color: black;
-    border-bottom: 1px solid white
+    background-color:white;
 }
 
-.panel-footer {
-    background-color: black !important;
-}
