--- a/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
+++ b/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
@@ -17,6 +17,9 @@
     padding-top:200px;
     width:50%;
 }
+.wrapper{
+    width:80%;
+}
 .heading-panel {
     margin-top: 60px;
 }
@@ -49,7 +52,6 @@ label {
 }
 
 .container-list {
-    opacity: 0.9;
     font-size: 20px;
     color: black;
     font-weight: normal;
@@ -57,6 +59,7 @@ label {
     font-family: Dosis;
     padding: 0px;
     margin-top: 16px;
+    width:auto;
 }   
 .border-panel {
     border: solid 2px gray;
