--- a/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
+++ b/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
@@ -1,4 +1,5 @@
 ﻿@import url('https://fonts.googleapis.com/css?family=Dosis|Josefin+Sans');
+@import url('https://fonts.googleapis.com/css?family=Oregano');
 .container {
     opacity: 0.9;
     font-size: 20px;
@@ -59,10 +60,10 @@ label {
     font-family: Dosis;
     padding: 0px;
     margin-top: 16px;
-    width:auto;
+    width: auto;
 }   
 .border-panel {
-    border: solid 2px gray;
+    border: solid 2px #404040;
     margin-bottom: 10px;
 }
 
@@ -120,8 +121,22 @@ btn.btn-primary:active {
     background-color:white;
 }
 .panel-font{
-    font-size:25px;
+    font-size:20px;
 }
 .currencyCode {
-color:green;
+    color: #0040ff;
+}
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('/Image/circlepreloader.gif') 50% 50% no-repeat white;
+}
+.booking-message {
+    font-family: Oregano;
+    font-size: 20px;
+    color: #404040;
 }
