add collapsable nav-bar

--- a/HotelReservation/HotelReservationEngine/wwwroot/Css/indexStyle.css
+++ b/HotelReservation/HotelReservationEngine/wwwroot/Css/indexStyle.css
@@ -1,28 +1,34 @@
 ﻿.indexBackground {
-    background: url("/Image/wallpaper.jpg") no-repeat fixed 100%;
-    background-size: cover;
+    background: url(/Image/wallpaper.jpg) 100% no-repeat fixed;
+    background-size: cover
 }
+
 .datePicker {
     border: 1px solid #c4c4c4;
     border-radius: 2px;
     background-color: #fff;
     color: grey;
-    font-size: 16px;
+    font-size: 16px
 }
+
 .inner-addon .glyphicon {
     position: absolute;
     padding: 10px;
-    pointer-events: none;
+    pointer-events: none
 }
+
 .inner-addon {
-    position: relative;
+    position: relative
 }
+
 .left-addon .glyphicon {
-    left: 0px;
+    left: 0
 }
+
 .left-addon input {
-    padding-left: 30px;
+    padding-left: 30px
 }
+
 .black {
-    color: black;
+    color: #000
 }
