--- a/HotelReservation/HotelReservationEngine/wwwroot/Css/guestDetailsStyle.css
+++ b/HotelReservation/HotelReservationEngine/wwwroot/Css/guestDetailsStyle.css
@@ -1,20 +1,20 @@
 ﻿.payButton {
-    color: white;
+    color: #fff;
     font-size: 25px;
-    background: #ff3300;
+    background: #f30;
     border-radius: 4px;
     margin-bottom: 6px;
     margin-top: 6px;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    text-shadow: 0 1px 1px rgba(0,0,0,.2)
 }
 
 .container-guest {
-    opacity: 0.9;
-    font-size:12px;
-    color:black;
-    font-weight: normal;
-    background-color:white;
+    opacity: .9;
+    font-size: 12px;
+    color: #000;
+    font-weight: 400;
+    background-color: #fff;
     font-family: Dosis;
-    padding: 0px;
-    margin-top: 16px;
+    padding: 0;
+    margin-top: 16px
 }
