--- a/HotelReservation/HotelReservationEngine/wwwroot/Css/pricingStyleSheet.css
+++ b/HotelReservation/HotelReservationEngine/wwwroot/Css/pricingStyleSheet.css
@@ -1,11 +1,15 @@
-﻿* {
-    box-sizing: border-box;
+﻿.button, .price li {
+    text-align: center
+}
+
+* {
+    box-sizing: border-box
 }
 
 .columns {
     float: left;
     width: 33.3%;
-    padding: 8px;
+    padding: 8px
 }
 
 .price {
@@ -13,45 +17,42 @@
     border: 2px solid #eee;
     margin: 0;
     padding: 0;
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
+    -webkit-transition: .3s;
+    transition: .3s
 }
 
     .price:hover {
-        box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+        box-shadow: 0 8px 12px 0 rgba(0,0,0,.2)
     }
 
     .price .header {
         background-color: #111;
-        color: white;
-        font-size: 25px;
-       
+        color: #fff;
+        font-size: 25px
     }
 
     .price li {
         border-bottom: 1px solid #eee;
-        padding: 20px;
-        text-align: center;
+        padding: 20px
     }
 
     .price .grey {
         background-color: #eee;
-        font-size: 20px;
+        font-size: 20px
     }
 
 .button {
-    background-color: #ff3300;
-    color: white;
+    background-color: #f30;
+    color: #fff;
     padding: 10px 25px;
-    text-align: center;
     text-decoration: none;
     font-size: 18px;
-    margin-top:2px;
-    margin-bottom:2px;
+    margin-top: 2px;
+    margin-bottom: 2px
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width:600px) {
     .columns {
-        width: 100%;
+        width: 100%
     }
 }
