--- a/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
+++ b/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
@@ -98,7 +98,7 @@ label {
 }
 
 btn.btn-primary:active {
-    background-color: grey !important
+    background-color: #808080 !important
 }
 
 .panelButton {
@@ -237,11 +237,16 @@ btn.btn-primary:active {
 .text {
     white-space: nowrap;
     color: white;
-    font-size: 20px;
+    font-size: 25px;
     position: absolute;
     overflow: hidden;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
+}
+.description{
+    font-size:14px;
+    text-align:justify;
+    text-justify:inter-word;
 }
