--- a/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
+++ b/HotelReservation/HotelReservationEngine/wwwroot/Css/Style.css
@@ -164,3 +164,50 @@ btn.btn-primary:active {
     font-size: 20px;
     color: #404040
 }
+
+.container-image {
+    position: relative;
+    width: 90%;
+    height: auto;
+}
+
+.image {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: #ff3300;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+}
+
+.container-image:hover .overlay {
+    bottom: 0;
+    height: 100%;
+}
+
+.text {
+    white-space: nowrap;
+    color: white;
+    font-size: 25px;
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+.description {
+    font-size: 14px;
+    text-align: justify;
+    text-justify: inter-word;
+}
